# phoenix2pytest

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  REFERENCE.md  SECURITY.md  SKILL.md  cloudbuild.yaml  pyproject.toml  tessl.json
.github/workflows/: ci.yml  codeql.yml  publish.yml  scorecard.yml
.tessl-plugin/: plugin.json
docs/: failure-modes.md
scripts/: bd_harvest.py  check_anti_ai_markers.py  check_text_style.py  ingest_demo_dataset.py  smoke_test_gemini.py  smoke_test_phoenix.py  trace_generator.py  vertical_slice.py
src/phoenix2pytest/: __init__.py  mcp_client.py  schema.py  synthesiser.py  web.py
tests/: test_check_text_style.py  test_default_client_wiring.py  test_demo_dataset.py  test_form_example.py  test_mcp_client.py  test_multi_trace.py  test_schema.py  test_smoke.py  test_synthesiser.py  test_web.py
tests/data/: demo_dataset.json
