[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phoenix2pytest"
version = "0.0.1"
description = "Turn production LLM failures into regression tests, automatically."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mikhail Golikov" }]
keywords = [
    "llm",
    "testing",
    "pytest",
    "arize",
    "phoenix",
    "agent",
    "regression",
    "observability",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "google-genai>=0.3.0",
    "arize-phoenix-client>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
]

[project.urls]
Repository = "https://github.com/golikovichev/phoenix2pytest"
Issues = "https://github.com/golikovichev/phoenix2pytest/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/phoenix2pytest"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "integration: tests that exercise external services (Phoenix MCP server via npx). Skipped by default; require PHOENIX_HOST and PHOENIX_API_KEY env vars.",
]
